# nestdbg

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: addr2line.rs  commands.rs  config.rs  main.rs  network.rs  output_writer.rs  socket.rs
src/terminal/: app.rs  input.rs  message.rs  mod.rs  popup.rs  ui.rs
