[package]
name = "nestdbg"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
clearscreen = "3.0.0"
ctrlc = "3.4.6"
directories = "6.0.0"
opener = { version = "0.7.2", features = ["reveal"] }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
tabled = "0.19.0"
toml = "0.8.22"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
